structmeta-tests/tests/compile_fail/struct_meta/too_many_unnamed_arguments.rs
#[structmeta_tests::attr_required_unnamed2(10, 20, 30)]
fn my_func() {}

fn main() {}
