structmeta-tests/tests/compile_fail/struct_meta/too_many_unnamed_arguments.stderr
error: too many arguments.
 --> $DIR/too_many_unnamed_arguments.rs:1:52
  |
1 | #[structmeta_tests::attr_required_unnamed2(10, 20, 30)]
  |                                                    ^^
